[tool.poetry]
name = "f1tenth-benchmark"
version = "0.1.0"
description = "Benchmarking library for tasks in the F1Tenth Gym"
authors = ["Nandan Tumu <nandant@seas.upenn.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
gymnasium = "^0.29.1"
plotly = "^5.19.0"
matplotlib = "^3.8.3"
f1tenth-gym = {git = "git@github.com:f1tenth/f1tenth_gym", rev = "v1.0.0"}

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pylint = "^3.1.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
