[tool.poetry]
name = "f1tenth-benchmark"
version = "0.1.0"
description = "Benchmarking library for tasks in the F1Tenth Gym"
authors = ["Nandan Tumu <nandant@seas.upenn.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
gymnasium = "^0.29.1"
plotly = "^5.19.0"
matplotlib = "^3.8.3"
f1tenth_gym = {git = "https://github.com/f1tenth/f1tenth_gym", branch = "v1.0.0"}
f1tenth_planning = {git = "https://github.com/f1tenth/f1tenth_planning", branch = "v1.0.0"}
sphinx = "^7.2.6"
numpydoc = "^1.6.0"
pydata-sphinx-theme = "^0.15.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pylint = "^3.1.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "tests",
]
